修改后台登录

--- a/application/admin/view/box/add.html
+++ b/application/admin/view/box/add.html
@@ -79,7 +79,7 @@
                         </div>
                     </form>
                     <!-- ajax上传文件s -->
-                    <form action="{:url('upload_file')}" id="form_photo" method="post" enctype="multipart/form-data">
+                    <form action="{:url('upload_photo')}" id="form_photo" method="post" enctype="multipart/form-data">
                         <input type="file" name="photo_file" style="display: none" onchange="photo_upload()" id="photo_file">
                     </form>
                     <form action="{:url('upload_music')}" id="form_voice" method="post" enctype="multipart/form-data">
