--- a/application/admin/view/common/base.html
+++ b/application/admin/view/common/base.html
@@ -85,7 +85,7 @@
 							</div>
 							<span class="block m-t-xs"> <strong class="font-bold" style="color: white">{$Think.session.admin_user_auth.username}</strong>
                                      </span>
-							<div class="logo-element">GAME</div>
+							<div class="logo-element">电子礼盒后台管理</div>
 						</li>
 						
 						{volist name="lefts_menu" id="vo"}
