--- a/application/admin/view/config/base.html
+++ b/application/admin/view/config/base.html
@@ -137,6 +137,18 @@
                             </div>
                         </div>
                         <div class="form-group">
+                            <label class="col-sm-2 control-label">盒子发送多久开奖（分钟）</label>
+                            <div class="col-sm-9">
+                                <input type="text" name="start_time" value="{$info.start_time}" class="form-control">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">盒子发送多久结束（分钟）</label>
+                            <div class="col-sm-9">
+                                <input type="text" name="end_time" value="{$info.end_time}" class="form-control">
+                            </div>
+                        </div>
+                        <div class="form-group">
                             <div class="col-sm-4 col-sm-offset-2">
                                 <input value="提交" type="submit" class="btn btn-primary ajax-post" target-form="form-horizontal" type="submit" >
                             </div>
