--- a/application/admin/view/box/edit.html
+++ b/application/admin/view/box/edit.html
@@ -47,7 +47,7 @@
                             <div class="col-sm-9">
                                 <dd class="upload_area clearfix" style="margin: 0 auto;">
                                     <ul id="imglist" class="post_imglist">
-                                        <li><a href="{$info.photo_url}" class="photo_css"><img class="wh60" id="file0" {if condition="$info.photo_url"}src="/static/images/photo.jpg"{else/} src="static/images/default.jpg"{/if} ></a></li>
+                                        <li><a href="{$info.photo_url}" class="photo_css"><img class="wh60" id="file0" {if condition="$info.photo_url"}src="/static/images/photo.jpg"{else/} src="/static/images/default.jpg"{/if} ></a></li>
                                     </ul>
                                     <label for="photo_file"><div class="upload_btn"></div></label>
                                 </dd>
@@ -58,7 +58,7 @@
                             <div class="col-sm-9">
                                 <dd class="upload_area clearfix" style="margin: 0 auto;">
                                     <ul id="imglist" class="post_imglist">
-                                        <li><a href="{$info.voice_url}" class="music_css" ><img class="wh60" id="file1" {if condition="$info.voice_url"}src="/static/images/music.jpg"{else/} src="static/images/default.jpg"{/if}></a></li>
+                                        <li><a href="{$info.voice_url}" class="music_css" ><img class="wh60" id="file1" {if condition="$info.voice_url"}src="/static/images/music.jpg"{else/} src="/static/images/default.jpg"{/if}></a></li>
                                     </ul>
                                     <label for="voice_file"><div class="upload_btn"></div></label>
                                 </dd>
