--- a/application/admin/view/login/index.html
+++ b/application/admin/view/login/index.html
@@ -25,13 +25,13 @@
                 <div class="form-group">
                     <input type="password" name="password" class="form-control" placeholder="密码" required="">
                 </div>
-                <div class="form-group">
-                    <input type="text" name="captcha" class="form-control" placeholder="验证码" required="">
+                <div class="form-group" style="width: 60%;float: left;">
+                    <input type="text" name="code" class="form-control" placeholder="验证码" required="">
                 </div>
-                <div class="form-group">
-                    <img src="{:captcha_src()}" alt="captcha" onclick="this.src=this.src"/>
+                <div  class="form-group" style="width: 30%;float: left;">
+                    <img src="{:url('verify')}" alt="captcha" onclick="this.src=this.src" class="code" />
                 </div>
-                    <button type="button" class="btn btn-primary block full-width m-b" id="submit_btn">登录</button>
+                <button type="button" class="btn btn-primary block full-width m-b" id="submit_btn">登录</button>
             </form>
         </div>
     </div>
@@ -44,13 +44,14 @@
         var login = () => {
             var username = $('input[name=username]').val();
             var password = $('input[name=password]').val();
-            var captcha = $('input[name=captcha]').val();
-            $.post("{:url('admin/login/index')}", { username: username, password: password, captcha: captcha }, function(res) {
+            var code = $('input[name=code]').val();
+            $.post("{:url('admin/login/index')}", { username: username, password: password, code: code }, function(res) {
                 if (res.code) {
-                    layer.msg(res.msg, { icon: 6 });
+                    layer.msg(res.msg, { icon: 1 });
                     location.href = res.url;
                 } else {
-                    layer.msg(res.msg, { icon: 5 });
+                    layer.msg(res.msg, { icon: 2 });
+                    $('.code').attr('src','{:url('verify')}');
                 }
             });
         };
