--- a/application/admin/view/common/base.html
+++ b/application/admin/view/common/base.html
@@ -81,7 +81,7 @@
 					<ul class="nav metismenu" id="side-menu">
 						<li class="nav-header">
 							<div class="dropdown profile-element">
-								<span><img alt="image" class="img-circle" src="__INSPINIA__/img/profile_small.jpg" /></span>
+								<span><img alt="image" class="img-circle" src="__INSPINIA__/img/default1.jpg" width="50" /></span>
 							</div>
 							<span class="block m-t-xs"> <strong class="font-bold" style="color: white">{$Think.session.admin_user_auth.username}</strong>
                                      </span>
