--- a/application/admin/view/goods/index.html
+++ b/application/admin/view/goods/index.html
@@ -52,7 +52,7 @@
                     <div class="row" style="margin-left:0px;" >
                         <a class="btn btn-default delete" href="{:url('Goods/add')}" >添加商品 </i></a>
                         <a class="btn btn-default delete" onclick="is_show_all(1)" href="javascript:;" >批量上架 </i></a>
-                        <a class="btn btn-default delete" onclick="is_show_all(0)" href="javascript:;" >批量上架 </i></a>
+                        <a class="btn btn-default delete" onclick="is_show_all(0)" href="javascript:;" >批量下架 </i></a>
                         <a class="btn btn-default delete" onclick="del_all(0)" href="javascript:;" >批量删除 <i class="fa fa-trash-o"></i></a>
 
                     </div>
