--- a/application/admin/view/config/base.html
+++ b/application/admin/view/config/base.html
@@ -149,6 +149,12 @@
                             </div>
                         </div>
                         <div class="form-group">
+                            <label class="col-sm-2 control-label">商品详情赠礼须知</label>
+                            <div class="col-sm-9">
+                                <script id="editor" name="gift_notice" type="text/plain" style="width:100%;height:400px;">{$info.gift_notice}</script> 
+                            </div>
+                        </div>
+                        <div class="form-group">
                             <div class="col-sm-4 col-sm-offset-2">
                                 <input value="提交" type="submit" class="btn btn-primary ajax-post" target-form="form-horizontal" type="submit" >
                             </div>
@@ -161,10 +167,24 @@
 </div>
 
 {/block}
-
+ 
 {block name="script"}
 <script type="text/javascript" src="__STATIC__/ueditor/1.4.3/ueditor.config.js"></script> 
 <script type="text/javascript" src="__STATIC__/ueditor/1.4.3/ueditor.all.min.js"> </script> 
 <script type="text/javascript" src="__STATIC__/ueditor/1.4.3/lang/zh-cn/zh-cn.js"></script> 
 <script src="__STATIC__/layui/src/localResizeIMG2.js" type="text/javascript"></script>
+<script>
+    //实例化富文本编辑器
+    var ue = UE.getEditor('editor',{
+        initialFrameWidth:650,
+        initialFrameHeight:180,
+        toolbars: [[
+            'fullscreen', 'source', '|', 'undo', 'redo', '|', 'searchreplace' ,
+            'bold', 'italic', 'underline', 'fontborder', 'strikethrough', 'superscript', 'subscript', 'removeformat', 'formatmatch','pasteplain', '|', 'forecolor', 'backcolor', 'insertorderedlist', 'insertunorderedlist', 'selectall', 'cleardoc', '|',
+            'rowspacingtop', 'rowspacingbottom', 'lineheight', 'paragraph', 'fontfamily', 'fontsize', 'indent', '|',
+            'justifyleft', 'justifycenter', 'justifyright', 'justifyjustify', '|', 'touppercase', 'tolowercase', '|',
+            'link', 'unlink', 'insertimage', 'insertvideo', 'music', 'attachment', 'map', 'gmap',
+        ]]
+    });
+</script>
 {/block}
