--- a/application/admin/view/goods/add.html
+++ b/application/admin/view/goods/add.html
@@ -68,6 +68,9 @@
       margin-left: -20%;
   
     }
+    table input{
+        width: 100%;
+    }
   </style>
 
 <div class="wrapper wrapper-content animated fadeInRight">
@@ -79,6 +82,9 @@
                 </div>
                 <div class="ibox-content">
                     <form method="post" class="form-horizontal" action="" enctype="multipart/form-data">
+                        <!-- 默认设置，付款立减库存 -->
+                        <input type="hidden" name="less_stock_type" value="2">
+
                         <div class="form-group">
                             <label class="col-sm-2 control-label"><span style="color:red;">*</span>商品名称</label>
                             <div class="col-sm-9">
