--- a/application/admin/view/goods/add.html
+++ b/application/admin/view/goods/add.html
@@ -190,7 +190,7 @@
                                 <div style="line-height:34px;">
                                     <span style="float:left;margin: 0 7px;"></span>
                                     <span style="float:left;width:10%;"><input type="text" name="price" value="" class="form-control"></span>
-                                    <span style="float:left;margin: 0 7px;">HK</span>
+                                    <span style="float:left;margin: 0 7px;">HK$</span>
                                 </div>
                             </div>
                         </div>
@@ -199,7 +199,7 @@
                             <div class="col-sm-9">
                                 <div style="line-height:34px;">
                                     <span style="float:left;margin: 0 7px;"></span>
-                                    <span style="float:left;width:10%;"><input type="text" name="taxes" value="" class="form-control"></span>
+                                    <span style="float:left;width:10%;"><input type="text" name="taxes" value="" class="form-control" maxlength="2"></span>
                                     <span style="float:left;margin: 0 7px;">%</span>
                                 </div>
                             </div>
@@ -210,7 +210,7 @@
                                 <div style="line-height:34px;">
                                     <span style="float:left;margin: 0 7px;"></span>
                                     <span style="float:left;width:10%;"><input type="text" name="discount" value="" class="form-control"></span>
-                                    <span style="float:left;margin: 0 7px;">HK</span>
+                                    <span style="float:left;margin: 0 7px;">HK$</span>
                                 </div>
                             </div>
                         </div>
