--- a/application/admin/view/goods/add.html
+++ b/application/admin/view/goods/add.html
@@ -84,6 +84,8 @@
                     <form method="post" class="form-horizontal" action="" enctype="multipart/form-data">
                         <!-- 默认设置，付款立减库存 -->
                         <input type="hidden" name="less_stock_type" value="2">
+                        <!-- 商品封面图 -->
+                        <input type="hidden" name="picture" value="">
 
                         <div class="form-group">
                             <label class="col-sm-2 control-label"><span style="color:red;">*</span>商品名称</label>
@@ -163,7 +165,19 @@
                                 </div>
                             </div>
                         </div>
-
+                        <div class="form-group syfm" style="display: none">
+                            <label class="col-sm-2 control-label">首页封面图</label>
+                            <div class="col-sm-9">
+                                <dd class="upload_area clearfix" style="margin: 0 auto;">
+                                    <ul id="imglist2" class="post_imglist_syfm"  style="float: left;">
+                                    </ul>
+                                    <label for="upload_image2" style="float: left;"><div class="upload_btn">
+                                    </div></label>
+                                    <div style=" margin-left: 10px;float: left;line-height: 60px;"><span class="jianyi" style="color: #5fb878;"></span></div>
+                                </dd>
+                            
+                            </div>
+                        </div>
                         <!-- <div class="form-group">
                             <label class="col-sm-2 control-label">上架时间</label>
                             <div class="col-sm-9">
@@ -174,15 +188,16 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label">商品封面</label>
                             <div class="col-sm-9">
-                                    <dd class="upload_area clearfix" style="margin: 0 auto;">
-                                        <ul id="imglist" class="post_imglist">
-                                        </ul>
-                                        <div class="upload_btn">
-                                            <input type="file" id="upload_image" value="图片上传" accept="image/jpeg,image/gif,image/png" capture="camera">
-                                        </div>
-                                    </dd>
+                                <dd class="upload_area clearfix" style="margin: 0 auto;">
+                                    <ul id="imglist" class="post_imglist">
+                                    </ul>
+                                    <div class="upload_btn">
+                                        <input type="file" id="upload_image" value="图片上传" accept="image/jpeg,image/gif,image/png" capture="camera">
+                                    </div>
+                                </dd>
                             </div>
                         </div>
+                        
 
                         <div class="form-group">
                             <label class="col-sm-2 control-label">商品价格</label>
@@ -343,6 +358,10 @@
                             </div>
                         </div>
                     </form>
+                    <!-- 图片上传 -->
+                    <form method="post" class="form-horizontal" id="ajaxForm" action="{:url('goods/upload_file')}" enctype="multipart/form-data">
+                        <input type="file" id="upload_image2" value="图片上传" accept="image/jpeg,image/gif,image/png" onchange="upload_file2()" name="file" capture="camera" style="display: none;">
+                    </form>
                 </div>
             </div>
         </div>
@@ -380,6 +399,18 @@ function upload_file(obj){
     }
 }
 
+//首页封面图上传
+function upload_file2(){
+    $("#ajaxForm").ajaxSubmit(function (data) {
+        if(data.status == 1){
+            $('input[name="picture"]').val(data.data);
+            $('.post_imglist_syfm').html('<li><img src="'+data.data+'" width="100" alt=""></li>');
+        }else{
+            alert(data.msg);
+        }
+    });
+}
+
 //ajax获取二级栏目
 function ajaxGetAttr(obj){
     var id = $(obj).val()
@@ -387,6 +418,7 @@ function ajaxGetAttr(obj){
         $('select[name="goods_attr2"]').html('<option>请选择二级栏目</option>');
         return false;
     }
+    getSyfm();
     $.post("{:url('goods/ajaxGetAttr')}",{'id':id},function(data){
         if(data.status){
             var option = '<option>请选择二级栏目</option>';
@@ -397,6 +429,21 @@ function ajaxGetAttr(obj){
 
         }
     },'json')
+}
+
+//判断需不需要上传首页封面图
+function getSyfm(){
+    var id = $('select[name="goods_attr1"]').val();
+    if(id == 1){
+        $('.syfm').css('display','block');
+        $('.jianyi').html('建议上传74x142的图片');
+    }else if(id== 2 || id==4 || id==6){
+        $('.syfm').css('display','block');
+        $('.jianyi').html('建议上传320x170的图片');
+    }else{
+        $('.syfm').css('display','none');
+        $('.jianyi').html('');
+    }
 }
 
 //ajax获取二级分类
