--- a/application/admin/view/goods/add_goods_attr.html
+++ b/application/admin/view/goods/add_goods_attr.html
@@ -98,7 +98,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-2 control-label">封面图</label>
+                            <label class="col-sm-2 control-label">广告图</label>
                             <div class="col-sm-9">
                                     <dd class="upload_area clearfix" style="margin: 0 auto;">
                                         <ul id="imglist" class="post_imglist">
