--- a/application/admin/view/turntable/edit.html
+++ b/application/admin/view/turntable/edit.html
@@ -7,58 +7,16 @@
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <h5>添加盒子</h5>
+                    <h5>设置中奖名单</h5>
                 </div>
                 <div class="ibox-content">
-                    <form method="post" class="form-horizontal" id="ajaxForm" action="{:url('box_cate/cate_post')}" enctype="multipart/form-data">
-                        <input type="hidden" name="id" value="{$info.id}">
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">名称</label>
-                            <div class="col-sm-9">
-                                <input type="text" name="name" value="{$info.name}" class="form-control">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label ">选择上级分类</label>
-                            <div class="col-sm-9">
-                                <select name="pid"  class="form-control">
-                                    <option value="0">顶级分类</option>
-                                    {volist name="cate_list" id="vo"}
-                                        <option value="{$vo.id}" {if condition="$info.id eq $info.pid"}selected="true"{/if}>{$vo.name}</option>
-                                    {/volist}
-                                </select> 
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">图片</label>
-                            <div class="img-preview" style="display:{$info.picture? 'block':'none'};margin-left:-20%">
-                                <img src="{$info.picture|default=''}" id='img_show' style="min-width: 0px !important; min-height: 0px !important; max-width: none !important; max-height: none !important; width: 300px; height: 200px">
-                            </div>
-                            <div class="form-group" style="margin-left:18%;">
-                                <label title="上传图片" for="pictur_btn" class="btn btn-primary" id="pictur">上传新图像
-                                    <input type="file" accept="image/jpg,image/jpeg,image/bmp,image/png,image/gif/*" name="file" id="pictur_btn" class="hide" />
-                                </label>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">排序</label>
-                            <div class="col-sm-9">
-                                <input type="text" name="sort" value="{$info.sort}" class="form-control">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">状态</label>
-                            <div class="col-sm-9">
-                                <div class="radio radio-success radio-inline">
-                                    <input type="radio" value="1" name="status" id="show1" {if condition="$info.status eq 1"}checked="true"{/if}>
-                                    <label for="show1">启用</label>
-                                </div>
-                                <div class="radio radio-danger radio-inline">
-                                    <input type="radio" value="0" name="status" id="show2" {if condition="$info.status eq 0"}checked="true"{/if}>
-                                    <label for="show2">禁用</label>
-                                </div>
-                            </div>
-                        </div>
+                    <form method="post" class="form-horizontal" action="{:url('edit')}" enctype="multipart/form-data">
+                        <input type="hidden" name="order_id" value="{$order_id}">
+                        <dd>
+                            <div><label><input type="checkbox" name="ids[]">用户1</label></div>
+                            <div><label><input type="checkbox" name="ids[]">用户2</label></div>
+                            <div><label><input type="checkbox" name="ids[]">用户3</label></div>
+                        </dd>
                         <div class="form-group">
                             <div class="col-sm-4 col-sm-offset-2">
                                 <input value="提交" type="submit" class="btn btn-primary ajax-post" target-form="form-horizontal" type="submit">
