--- a/application/admin/view/turntable/index.html
+++ b/application/admin/view/turntable/index.html
@@ -22,6 +22,7 @@
                             <thead>
                             <tr>
                                 <th>订单id</th>
+                                <th>礼盒数量</th>
                                 <th>开奖时间</th>
                                 <th>结束时间</th>
                                 <th>盒子id</th>
@@ -32,11 +33,12 @@
                             {volist name="list" id="vo"}
                             <tr>
                                 <td>{$vo.order_id}</td>
+                                <td>{$vo.godos_num|default="0"}</td>
                                 <td>{$vo.lottery_time|date="Y-m-d H:i:s",###}</td>
                                 <td>{$vo.overdue_time|date="Y-m-d H:i:s",###}</td>
                                 <td>{$vo.box_id}</td>
                                 <td>
-                                    <a class="btn btn-default delete" href="{:url('edit',['id'=>$vo.order_id],false)}" >查看</i></a>
+                                    <a class="btn btn-default delete" href="{:url('edit',['order_id'=>$vo.order_id],false)}" >设置中奖名单</i></a>
                                 </td>
                             </tr>
                             {/volist}
