--- a/application/admin/view/order/order_refund.html
+++ b/application/admin/view/order/order_refund.html
@@ -62,17 +62,17 @@
                                 <tr>
                                     <td>{$vo.order_sn}</td>
                                     <td>{:getPayBody($vo.order_id)}</td>
-                                    <td>{$refund_reason[$vo.refund_reason]}</td>
+                                    <td>{$refund_reason[$vo.reason]}</td>
                                     <td>
-                                        {eq name="$vo.refund_type" value="1"}
-                                            支付原路退回
+                                        {eq name="$vo.prine_way" value="1"}
+                                            退回微信
                                         {else/}
                                             退到用户余额
                                         {/eq}
                                     </td>
-                                    <td>{$vo.order_amount}</td>
-                                    <td>{$vo.create_time|date="y-m-d H:i:s",###}</td>
-                                    <td>{$refund_status[$vo.refund_status]}</td>
+                                    <td>{$vo.price}</td>
+                                    <td>{$vo.addtime|date="y-m-d H:i:s",###}</td>
+                                    <td>{$refund_status[$vo.status]}</td>
                                     <td>
                                         <a class="btn btn-default" href="{:url('order/refund_edit',['id'=>$vo.id])}"><i class="fa fa-list"></i> 查看</a>
                                         <!-- <a class="btn btn-default delete" @click.stop="del_data($event)" attr_url="{:url('index/page_delete',['id'=>$vo.order_id])}" id="{$vo.order_id}" >删除 <i class="fa fa-trash-o" attr_url="{:url('index/page_delete',['id'=>$vo.id])}"></i></a> -->
